--- a/src/components/_variable.scss
+++ b/src/components/_variable.scss
@@ -20,6 +20,7 @@ $palette-blue-600: #00c;
 $palette-blue-alt: #77c;
 
 $palette-orange: #ff5a1f;
+$palette-orange-light: #f6b26b;
 $palette-red: #db183f;
 
 // Breakpoints
