--- a/src/components/ITS/ITS.scss
+++ b/src/components/ITS/ITS.scss
@@ -2,11 +2,15 @@
 @import "../animation";
 
 #its-sec1 {
+    position: fixed;
+    width: 100%;
     background-image:url(/imgs/its.png);
     background-size: auto 110%;
     background-position: center;
     background-repeat:no-repeat;
     z-index: 0;
+    opacity: 1;
+    transition-duration: 0.3s;
     color: $palette-white;
 
     &::after {
@@ -32,7 +36,13 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        transition-duration: 0.3s;
         z-index: 1;
+
+        &.fade1 {
+            transform: scale(0.9) translateY(-5rem);
+            opacity: 0.7;
+        }
     }
     h2 {
         margin-bottom: 0;
@@ -111,4 +121,152 @@
         transform:scaleY(-1);
         margin-left:-25px;
     }
+
+    &.fade2 {
+        opacity: 0.8;
+    }
+
+    &.fade3 {
+        opacity: 0;
+    }
+}
+#its-sec1-placeholder {
+    position: relative;
+    height: 100vh;
+}
+
+#its-sec2 {
+    z-index: 3;
+
+    .container{
+        background: $palette-white;
+        padding: 3rem 7rem;
+        border-radius: 5px;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .subheader {
+        width: 65%;
+    }
+
+    .playerStart {
+        margin-top: 3rem;
+    }
+
+    .endOfSec2 {
+        margin-bottom: 3rem;
+    }
+}
+
+#its-sec3 {
+    z-index: 2;
+    background: $palette-white;
+    
+    &::after {
+        position:absolute;
+        content: "";
+        top: -50vh;
+        margin:0;
+        padding:0;
+        width:100%;
+        height:50vh;
+        background: linear-gradient(rgba(255, 255, 255, 0) 0, rgba(255,255,255, 0.4) 20%, rgba(255,255,255, 0.9) 60%, white 70%)
+    }
+
+    .container {
+        padding: 0 7rem 10rem;
+    }
+
+    p {
+        margin: 0 0 5rem;
+
+        &.lead {
+            margin: 0 0 1.5rem;
+        } 
+    }
+
+    .img-its1 {
+        width: 100%;
+    }
+}
+
+#its-sec4 {
+    z-index: 2;
+    background: linear-gradient(to bottom left, $palette-grey-700, $palette-black);
+    color: $palette-white;
+    box-sizing: border-box;
+    overflow: hidden;
+    min-height: 0;
+
+    .section-header{
+        margin-top: 2rem;
+
+        &::after {
+            background-color: $palette-white;
+        }
+    }
+
+    .container {
+        padding: 0 7rem 2rem;
+    }
+
+    p {
+        margin: 0 0 5rem;
+
+        &.lead {
+            margin: 0 0 1.5rem;
+        } 
+    }
+}
+
+#its-sec5 {
+    z-index: 2;
+    background: $palette-white;
+    box-sizing: border-box;
+    overflow: hidden;
+    min-height: 0;
+
+    .section-header{
+        margin-top: 5rem;
+    }
+
+    .container {
+        padding: 0 7rem;
+    }
+
+    p {
+        margin: 0 0 5rem;
+
+        &.lead {
+            margin: 0 0 1.5rem;
+        } 
+    }
+
+    .img-its2, .img-its3 {
+        height: 400px;
+    }
+}
+
+#its-sec6 {
+    z-index: 2;
+    background: $palette-grey-100;
+    box-sizing: border-box;
+    overflow: hidden;
+    min-height: 0;
+
+    .container {
+        padding: 0 7rem;
+    }
+
+    p {
+        margin: 0 0 5rem;
+
+        &.lead {
+            margin: 0 0 1.5rem;
+        } 
+    }
+
 }
