--- a/src/App.scss
+++ b/src/App.scss
@@ -79,7 +79,7 @@ p {
 }
 
 .text-blue {
-    color: $palette-blue-500;
+    color: $palette-blue-600;
 }
 
 .text-orange {
@@ -88,4 +88,8 @@ p {
 
 .text-orange-light {
     color: $palette-orange-light;
+}
+
+.text-cmu {
+    color: #991b1e;
 }
