--- a/src/components/_variable.scss
+++ b/src/components/_variable.scss
@@ -15,7 +15,7 @@ $palette-blue: #6ED3FF;
 $palette-blue-light: #EBFEFF;
 $palette-blue-400: #1497ff;
 $palette-blue-500: #085ff7;
-$palette-blue-600: #00c;
+$palette-blue-600: #0044e3;
 
 $palette-blue-alt: #77c;
 
