Add icons for mobile, scroll/resize fix

--- a/src/components/ITS/ITS.scss
+++ b/src/components/ITS/ITS.scss
@@ -240,8 +240,11 @@
         } 
     }
 
-    .img-its2, .img-its3 {
-        height: 400px;
+    .img-its2 {
+        width: 56.9%;
+    }
+    .img-its3 {
+        width: 43.1%;
     }
 }
 
