--- a/src/components/_variable.scss
+++ b/src/components/_variable.scss
@@ -2,7 +2,7 @@
 $palette-black: #1a1a1a;
 $palette-white: #fff;
 
-$palette-grey-700: #4b4b4b;
+$palette-grey-700: #2d2d2d;
 $palette-grey-600: #767676;
 $palette-grey-500: #999;
 $palette-grey-400: #ccc;
