--- a/src/components/Flyer/Flyer.scss
+++ b/src/components/Flyer/Flyer.scss
@@ -161,6 +161,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 20px;
 
     img {
         width: 40px;
@@ -199,7 +200,7 @@
     &:hover {
         background-color: $palette-white;
         img {
-            width: 80%;
+            width: 75%;
             filter: brightness(1)
         }
     }
@@ -225,7 +226,7 @@
 
     @include screen-md {
         top: 0;
-        left: calc(50% - 91px);
+        left: calc(50% - 90px);
         height: 100%;
         width: 182px;
     }
