--- a/src/components/MenuScreen/MenuScreen.scss
+++ b/src/components/MenuScreen/MenuScreen.scss
@@ -26,6 +26,10 @@
 
 .global-menu.right {
     right: 0;
+
+    a:hover {
+        background: transparent;
+    }
 }
 
 .global-menu.justify-left {
