--- a/src/components/PortfolioCard/PortfolioCard.scss
+++ b/src/components/PortfolioCard/PortfolioCard.scss
@@ -58,11 +58,18 @@ div.portfolio-card {
     .portfolio-card-btn {
         height: 3rem;
         min-width: 150px;
-        padding: 0.9rem 0;
         line-height: 1;
         text-align: center; 
-        border: 2px solid $palette-black;
         text-transform: uppercase;
+        border-radius: 30px;
+        background-color: $palette-grey-100;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            margin-left: 0.5rem;
+        }
     }
 
     &:hover {
@@ -82,6 +89,10 @@ div.portfolio-card {
     position: fixed;
     transform: translateY(0);
     z-index: 4;
+}
+
+.portfolio-card.MuiPaper-rounded {
+    border-radius: 20px;
 }
 
 .portfolio-card-large {
