--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,121 +5,46 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 5.3125rem;
-    color: $palette-white;
-    background-color: $palette-black;    
-    box-shadow: 0 1px 8px $palette-black;
+    height: 5rem;
+    // color: $palette-white;
+    background-color: $palette-white;    
+    box-shadow: 0 1px 5px $palette-grey-400;
     z-index: 9;
-    transition-duration: 0.3s;
+    transition-duration: 0.2s;
     overflow: hidden;
-}
-
-.nav.scrolled {
-    top: -5.3125rem;
-    box-shadow: none;
-}
-
-.nav-container {
-    max-width: $screen-lg;
-    margin: auto;
-}
-
-.logo-wrapper {
-    order: -1;
-    @include screen-sm {
-        order: 0;
-    }
-}
-
-.nav-item {
-    text-align: center;
-    font-size: 1rem;
-    animation-name: fadeInUp;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-name: fadeIn;
     animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
+}
+
+.nav.scrolled {
+    top: -5rem;
+    box-shadow: none;
+}
+.nav-logo {
+    width: 4rem;
+    height: 4rem;
+    background-image:url(/favicon.png);
+	background-size: cover;
+    background-repeat:no-repeat;
     opacity: 0;
-
-    &.logo {
-        position: relative;
-        animation: none;
-        opacity: 1;
-        padding: 0;
-        height: 5.3125rem;
-
-        .logo-text {
-            position: relative;
-            width: 3rem;
-            font-size: 2rem;
-            padding: 0;
-            animation-name: headerLogoShrink;
-            animation-duration: 0.1s;
-            animation-timing-function: ease-in-out;
-            animation-delay: 0.9s;
-            animation-fill-mode: forwards;
-            background-color: $palette-black;
-            z-index: 2;
-
-            &::after {
-                position: absolute;
-                content: "TC";
-                height: 100%;
-                left: 50%;
-                transform: translateX(-50%);
-                color: $palette-white;
-                width: 2.7rem;
-                animation-name: logoFadeInDown;
-                animation-duration: 1s;
-                animation-timing-function: ease-in-out;
-                animation-fill-mode: forwards;
-                padding: 1.3rem 0;
-            }
-        }
-
-        &::after {
-            position: absolute;
-            content: "";
-            height: 4rem;
-            width: 80px;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            border: 1px solid $palette-white;
-            border-radius: 5px;
-            z-index: 1;
-            animation-name: logoFadeInUp;
-            animation-duration: 1s;
-            animation-fill-mode: forwards;
-        }
-    }
-
-    a {
-        width: 100%;
-        height: 100%;
-        vertical-align: top;
-
-        button{
-            width: 100%;
-            padding: 2rem 0;
-            font-size: 1rem;
-            line-height: 1.3;
-            color: $palette-grey-400;
-            text-transform: capitalize;
-
-            &:hover {
-                color: $palette-white;
-            }
-        }
-    }
+    animation-name: logoFadeInUp;
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    animation-delay: 0.2s;
 }
 
 .nav-hamburger {
     cursor: pointer;
     position: fixed;
-    left: 2rem;
-    top: 2rem;
-    height: 1.2rem;
-    width: 1.3rem;
+    left: 16px;
+    top: 19px;
+    padding: 8px 0;
     z-index: 12;
     opacity: 0;
     transform: translateY(20px);
@@ -130,11 +55,15 @@
     animation-fill-mode: forwards;
     animation-delay: 0.5s;
 
+    @include screen-md {
+        left: 24px;
+    }
+
     .nav-hamburger-bars {
-        width: 100%;
+        width: 20px;
         height: 2px;
-        margin: 8px 0;
-        background-color: $palette-white;
+        margin: 8px 8px 16px;
+        background-color: $palette-black;
         position: relative;
         transition: background-color 320ms ease-in-out;
 
@@ -144,7 +73,7 @@
             display: block;
             width: 120%;
             height: 2px;
-            background-color: $palette-white;
+            background-color: $palette-black;
             position: absolute;
             z-index: -1;
             transition: transform 320ms ease-in-out, background-color 200ms ease-in-out;
@@ -152,7 +81,7 @@
 
         &::before {
             transform-origin: top right;
-            top: -8px;
+            background-color: $palette-white;
         }
 
         &::after {
@@ -163,7 +92,7 @@
 }
 
 .nav-hamburger.scrolled {
-    top: -5.3125rem;
+    top: -5rem;
 }
 
 .nav-hamburger.open {
@@ -177,11 +106,11 @@
         }
 
         &::before {
-            transform: rotate(45deg) translate(7px, 17px);
+            transform: rotate(45deg) translate(4px, 14px);
         }
 
         &::after {
-            transform: rotate(-45deg) translate(7px, -17px);
+            transform: rotate(-45deg) translate(4px, -14px);
         }
     }
 }
@@ -197,7 +126,7 @@
         color: $palette-grey-400;
         padding: 1rem 3rem;
         text-transform: uppercase;
-        border-radius: 30px;
+        border-radius: 10px;
         transition-duration: 0.3s;
         width: 100%;
     }
