--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -6,6 +6,8 @@
     margin: auto;
     max-width: $screen-lg;
     padding: 3rem 1.5rem 4rem;
+    z-index: 1;
+
     &::after {
         position: absolute;
         top: 8rem;
@@ -52,11 +54,13 @@
 }
 
 #sec1 {
-    color: $palette-white;
-    background-image:url(/imgs/bgsec1.jpg);
-	background-size: cover;
-    background-repeat:no-repeat;
+    // color: $palette-white;
+    // background-image:url(/imgs/bgsec1.jpg);
+	// background-size: cover;
+    // background-repeat:no-repeat;
+    min-height: 0;
     z-index: 0;
+
     &::before {
         position:absolute;
         content: "";
@@ -67,10 +71,9 @@
         height:100%;
         background-color: $palette-black;
         animation-name: fadeOut;
-        animation-duration: 2s;
-        animation-timing-function: ease-in;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
         animation-fill-mode: forwards;
-        animation-delay: 0.5s;
     }
 
     &::after {
@@ -81,16 +84,20 @@
         padding:0;
         width:100%;
         height:100%;
-        background: linear-gradient($palette-black, rgba($palette-black, 0.9) 20%, rgba($palette-black, 0.6) 40%, rgba($palette-black, 0.4))
+        // background: linear-gradient($palette-black, rgba($palette-black, 0.9) 20%, rgba($palette-black, 0.6) 40%, rgba($palette-black, 0.4))
     }
     .container {
-        height: 100vh;
+        padding-top: 10rem;
         z-index: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
+
+        @include screen-md {
+            padding-top: 12rem;
+        }
     }
     h1 {
         margin: 2rem 0 1rem;
@@ -148,6 +155,10 @@
         @include screen-md {
             height:200px;
         }
+
+        * {
+            filter: brightness(0.1);
+        }
     }
     #chu-logo{
         width:120px;
@@ -197,13 +208,17 @@
             margin-left:-25px;
         }
     }
-}
 
-#sec2 {
-    height: auto;
-    min-height: 0;
+    .section-header {
+        animation-name: fadeInUp;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 1.5s;
+        opacity: 0;
+    }
 
-    .container {
+    .container-flyer {
         padding: 0;
         margin: 0 1rem;
         display: flex;
@@ -211,7 +226,14 @@
         border-radius: 20px;
         overflow: hidden;;
         width: auto;
+        text-align: left;
         box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.3);
+        animation-name: fadeInUp;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 1.7s;
+        opacity: 0;
 
         @include screen-md {
             flex-direction: row;
