--- a/src/components/_animation.scss
+++ b/src/components/_animation.scss
@@ -40,16 +40,11 @@
     100% {opacity: 1;transform: translateY(0)}
 }
 
-@keyframes logoFadeInDown {
-    0% {opacity: 0;transform: translate(-50%, -10px)}
-    90% {opacity: 1;transform: translate(-50%, 0)}
-    100% {opacity: 1;transform: translate(-50%, 0)}
-}
-
 @keyframes logoFadeInUp {
-    0% {opacity: 0;width: 80px;height: 4rem;border-width: 1px;}
-    90% {opacity: 1;width: 80px;height: 4rem;border-width: 1px;}
-    100% {opacity: 1;width: 65px;height: 3.2rem;border-width: 2px;}
+    0% {opacity: 0;transform: translateY(10px)}
+    60% {opacity: 1;transform: translateY(-4px)}
+    80% {opacity: 1;transform: translateY(2px)}
+    100% {opacity: 1;transform: translateY(0)}
 }
 
 @keyframes headerLogoShrink {
