--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -54,12 +54,9 @@
 }
 
 #sec1 {
-    // color: $palette-white;
-    // background-image:url(/imgs/bgsec1.jpg);
-	// background-size: cover;
-    // background-repeat:no-repeat;
     min-height: 0;
     z-index: 0;
+    padding-bottom: 100px;
 
     &::before {
         position:absolute;
@@ -246,6 +243,8 @@
 }
 
 #sec3 {
+    background: $palette-grey-100;
+
     .container {
         padding: 0 1rem 100px;
     }
