--- a/src/components/Flyer/Flyer.scss
+++ b/src/components/Flyer/Flyer.scss
@@ -36,6 +36,7 @@
 .flyer-left {
     height: 600px;
     padding-top: 0rem;
+    padding-bottom: 0rem;
     left: 0;
     width: 100%;
     transform: translateY(-100%);
@@ -75,6 +76,7 @@
     @include screen-md {
         height: 500px;
         padding-top: 5rem;
+        padding-bottom: 5rem;
         width: calc(50% + 91px);
         transform: translateX(-100%);
         color: $palette-white;
@@ -87,6 +89,7 @@
 
 .flyer-left.noanimation {
     position: relative;
+    padding-bottom: 5rem;
     transform: translateX(0);
     animation-name: none;
     color: $palette-white;
@@ -157,7 +160,8 @@
 .flyer-icon {
     position: relative;
     width: 100px;
-    height: 100px;;
+    height: 100px;
+    max-width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
