--- a/src/components/Flyer/Flyer.scss
+++ b/src/components/Flyer/Flyer.scss
@@ -13,7 +13,12 @@
 
     p {
         line-height: 1.7;
+        margin-top: 2rem;
         margin-bottom: 2rem;
+
+        @include screen-sm {     
+            margin-top: 0;
+        }
     }
 
     .icons {
@@ -34,6 +39,7 @@
 }
 
 .flyer-left {
+    padding-bottom: 160px;
     left: 0;
     width: 100%;
     transform: translateY(-100%);
@@ -152,7 +158,7 @@
 
 .flyer-icon {
     position: relative;
-    width: 100px;
+    width: 120px;
     height: 100px;
     max-width: 50%;
     display: flex;
@@ -192,7 +198,6 @@
     }
 }
 .flyer-right .flyer-icon{
-    width: 150px;
     cursor: pointer;
 
     img {
