--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -32,7 +32,7 @@
 	background-size: cover;
     background-repeat:no-repeat;
     opacity: 0;
-    animation-name: logoFadeInUp;
+    animation-name: fadeIn;
     animation-duration: 0.8s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
