--- a/src/components/_variable.scss
+++ b/src/components/_variable.scss
@@ -16,6 +16,7 @@ $palette-blue-light: #EBFEFF;
 $palette-blue-400: #1497ff;
 $palette-blue-500: #085ff7;
 $palette-blue-600: #0044e3;
+$palette-blue-700: #485679;
 
 $palette-blue-alt: #77c;
 
