--- a/src/components/PortfolioCard/PortfolioCard.scss
+++ b/src/components/PortfolioCard/PortfolioCard.scss
@@ -140,3 +140,20 @@ div.portfolio-card {
         transform: translateY(100%) !important;
     }
 }
+
+.portfolio-card.fadeOut::after {
+    position: absolute;
+    content: '';
+    margin:0;
+    padding:0;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    background-color: $palette-black;
+    z-index: 5;
+}
