--- a/src/components/Maintenance/Maintenance.scss
+++ b/src/components/Maintenance/Maintenance.scss
@@ -6,13 +6,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    h1 {
+        font-size: 2.5rem;
+
+        @include screen-md {
+            font-size: 4rem;
+        }
+    }
+
+    h4 {
+        font-size: 1rem;
+
+        @include screen-md {
+            font-size: 1.5rem;
+        }
+    }
 }
 
 .maintenance-logo-button {
+    margin-bottom: 10%;
     cursor: pointer;
     outline: none;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,6 +41,11 @@
         -8px -8px 12px 0 rgba(0, 0, 0, 0.10),
         rgba(0, 0, 0, 0.05) 0 0 12px inset,
         rgba(0, 0, 0, 0.05) 12px 12px 16px inset;
+
+    @include screen-md {
+        width: 300px;
+        height: 300px;
+    }
 }
 
 .maintenance-logo-button-back {
@@ -36,21 +58,33 @@
 
 .eyeball {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 10px;
+    height: 10px;
     background-color: $palette-black;
+    top: 110px;
     border-radius: 50%;
-    top: 172px;
     animation-name: fadeIn;
     animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
     opacity: 0;
+
+    @include screen-md {
+        top: 172px;
+        width: 15px;
+        height: 15px;
+    }
 }
 
 .eyeball-left {
-    left: 105px;
+    left: 70px;
+    @include screen-md {
+        left: 105px;
+    }
 }
 .eyeball-right {
-    left: 180px;
+    left: 120px;
+    @include screen-md {
+        left: 180px;
+    }
 }
