--- a/src/components/WavingLogo/WavingLogo.scss
+++ b/src/components/WavingLogo/WavingLogo.scss
@@ -30,6 +30,7 @@
 }
 #hand{
     position:absolute;
+    top: 100%;
     left:50%;
     margin-top:-35px;
     margin-left:-100px;
@@ -52,6 +53,7 @@
 }
 #smile{
     position:absolute;
+    top: 0;
     left:50%;
     margin-top:110px;
     width:32px;
