Add indeed oh page

--- a/src/components/Flyer/Flyer.scss
+++ b/src/components/Flyer/Flyer.scss
@@ -215,8 +215,8 @@
     &:hover,
     &:last-child {
         background-color: $palette-white;
-        box-shadow: inset 3px 3px 9px $palette-grey-300,
-            inset -3px -3px 9px $palette-grey-200;
+        box-shadow: 3px 3px 9px $palette-grey-300,
+            -3px -3px 9px $palette-grey-200;
         img {
             width: 75%;
             filter: brightness(1)
