--- a/src/components/IndeedPage/IndeedPage.scss
+++ b/src/components/IndeedPage/IndeedPage.scss
@@ -21,6 +21,10 @@ div.job-container {
             margin-top: 1.33em;
         }
     }
+
+    p {
+        line-height: 1.4;
+    }
 }
 
 .job-container-inner {
