--- a/src/components/IndeedMicroFE/IndeedMicroFE.scss
+++ b/src/components/IndeedMicroFE/IndeedMicroFE.scss
@@ -7,13 +7,21 @@
     transition-duration: 0.3s;
     color: $palette-white;
     background-color: $palette-black;
+    min-height: auto;
 
     .container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-        height: 100vh;
+        padding-top: 150px;
+
+        @include screen-md {
+            padding-top: 200px;
+        }
+
+        @include screen-lg {
+            padding-top: 300px;
+        }
     }
 
     h1 {
@@ -28,10 +36,10 @@
 
     .disclaimer {
         font-size: 9px;
-        margin-top: 100px;
 
         @include screen-sm {
-            font-size: 11px;    
+            font-size: 11px;
+            margin-top: 100px;
         }
 
         &::before {
@@ -47,25 +55,8 @@
 }
 
 .indeed-illustration {
-    z-index: 1;
-    background-image: url(/imgs/indeed-oh1.png);
-    margin-top: -200px;
-    padding-top: 250px;
-    background-size: 90%;
-    background-position: top center;
-    background-repeat: no-repeat;
-
-    @include screen-md {
-        padding-top: 560px;
-        margin-top: -430px;
-        background-size: 70%;
-    }
-
-    @include screen-lg {
-        padding-top: 600px;
-        margin-top: -270px;
-        background-size: 60%;
-    }
+    width: 90%;
+    max-width: 1000px;
 }
 
 #indeed-sec3 {
