--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 
 .common-footer {
     position: relative;
-    padding-top: 1rem;
+    padding: 1rem 0;
     color: $palette-grey-400;
     background-color: $palette-black;
     max-width: none;
