Connect flyer and indeed page

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -56,7 +56,7 @@
 #sec1 {
     min-height: 0;
     z-index: 0;
-    padding-bottom: 100px;
+    margin-bottom: 100px;
 
     &::before {
         position:absolute;
