--- a/src/components/IndeedPage/IndeedPage.scss
+++ b/src/components/IndeedPage/IndeedPage.scss
@@ -1,7 +1,7 @@
 @import "../variable";
 
 div.job-container {
-    padding: 0 0 100px;
+    padding: 1.5rem 0;
     margin: 0 1rem;
     width: auto;
 
